# CVC

./: .gitignore  CMakeLists.txt  CVC.h  ConventionalStrategy.h  Strategy.h  conventionalStrategy.cpp  cvc.cpp  cvc_tests.cpp
src/: CVC.cpp  commitParser.cpp  conventionalStrategy.cpp  cvc.cpp  entry.cpp  entrypoint.cpp  versionProcessor.cpp
src/h/: CVC.h  CommitParser.h  ConventionalStrategy.h  Strategy.h  VersionProcessor.h
test/: commitParserTest.cpp  cvcTest.cpp  cvcTests.cpp  cvc_tests.cpp  testEntrypoint.cpp  versionProcessorTest.cpp
